added type itself, if extensible, to HC; tons of tests changed